fix: clarify usage instructions for custom color command in documentation

--- a/packages/website/src/content/docs/modules/colors.mdx
+++ b/packages/website/src/content/docs/modules/colors.mdx
@@ -23,7 +23,7 @@ Al escribir `/colors` en el chat, el bot mostrará un menú interactivo con las 
 <Aside type="tip">Ten en cuenta que los roles que estén por encima de un puntero no deben tener colores personalizados.</Aside>
 ### Uso personalizado
 
-Si usas `/colors custom`, podrás personalizar tu color eligiendo uno desde un código hexadecimal o creando una plantilla propia.
+Si usas `/colors custom`, podrás personalizar tu color eligiendo uno desde un código hexadecimal.
 
 ---
 
